# Paper-Port

./: .gitignore  BREEZE_TOTP_SETUP_GUIDE.md  CAPITAL_APEX_DOCUMENTATION.md  E2E-UAT-SCRIPTS.md  MAINTENANCE_PLAN.md  MASTER-TEST-INVENTORY.md  OPTIQ_PRD.html  PERFORMANCE-TEST-PLAN.md  PaperPort_Documentation.html  README.md  REGRESSION-MANIFEST.md  SECURITY-REVIEW.md  TEST-STRATEGY.md  TEST-SUITE-SPECIFICATION.md  docker-compose.yml  ecosystem.config.cjs  render.yaml  start.ps1
.github/workflows/: ci.yml
Requirements/: OPTIQ_PRD.docx  ZeroLoss_AI_PRD.docx  ZeroLoss_AI_PRD_Addendum_v2.docx
deploy/: redeploy.sh  server-deploy.sh  ssh-deploy.ps1  ssh-deploy.sh
engine/: Cargo.toml  engine.toml
engine/data/: nse_universe.json
engine/src/: advanced_signals.rs  alerts.rs  backtest.rs  broker.rs  broker_icici.rs  broker_upstox.rs  broker_zerodha.rs  config.rs  continuous_scanner.rs  correlation.rs  correlation_guard.rs  exec_algo.rs  execution_analytics.rs  feature_store.rs  futures_scanner.rs  greeks.rs  iv_surface.rs  live_executor.rs  main.rs  market_data.rs  ml_scorer.rs  monte_carlo.rs  multi_timeframe.rs  news_sentiment.rs  oms.rs  optimize.rs  options_data.rs  options_strategy.rs  orderbook_analyzer.rs  paper_live_bridge.rs  portfolio_opt.rs  position_sizing.rs  premarket.rs  rate_limiter.rs  risk.rs  scan.rs  server.rs  signal_ranker.rs  signals.rs  slippage.rs  (+9 more)
frontend/: .env.example  .env.production  Dockerfile  components.json  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  test_api.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.setup.ts  playwright.config.ts
frontend/e2e/tests/: navigation.spec.ts  settings.spec.ts  strategy-builder.spec.ts  trading.spec.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: api.test.ts  auth.test.tsx  dashboard.test.tsx  optionChain.test.tsx  portfolio-consistency.test.ts  stores.test.ts  (+3 more)
gcp/: deploy.sh  setup-breeze-bridge.sh  setup-https.sh  setup-vm.sh
server/: .env.example  Dockerfile  package-lock.json  package.json  test-auto-session.mjs  test-breeze-creds.mjs  test-breeze.mjs  test-db.mjs  test-health.mjs  tsconfig.json  vitest.config.ts
server/breeze-bridge/: app.py  requirements.txt  test_bridge.py
server/ml-service/: Dockerfile  app.py  ensemble.py  lstm_model.py  model_store.py  online_learner.py  regime_detector.py  requirements.txt  return_predictor.py  rl_execution.py  signal_scorer.py  strategy_allocator.py  tft_model.py
server/prisma/: schema.local.prisma  schema.prisma
server/scripts/: download-engine.mjs
server/src/: app.ts  config.ts  index.ts
server/tests/: helpers.ts  setup.ts
(+225 files in other folders)
