[package]
name = "capital-guard-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance computation engine for Capital Guard (backtesting, signals, risk metrics, Greeks)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
