[package]
name = "capital-guard-engine"
version = "0.2.0"
edition = "2021"
description = "High-performance algorithmic trading engine for Capital Guard"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime + networking
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# HTTP client for broker API calls (sync, no runtime conflict with tokio)
ureq = { version = "2", features = ["json"] }

# WebSocket client for market data feeds
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Logging & diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Parallelism
rayon = "1.10"

# Utilities
uuid = { version = "1", features = ["v4"] }
dashmap = "6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4

[profile.dev]
opt-level = 1
